--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<!-- webpage content goes here in the body -->
+<!-- webpage content goes here in the body Comment -->
 
 	<div id="page">
 		<div id="logo">
