--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 			<ul>
 				<li><a href="#/home.html">Home</a></li>
 				<li><a href="#/about.html">About</a></li>
-				<li><a href="#/contact.html">Contact</a></li>
+				<li><a href="#/contact.html">Contact Añado comentario desde mi usuario de viewnext</a></li>
 			</ul>	
 		</div>
 		<div id="content">
