--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 
 	<div id="page">
 		<div id="logo">
-			<h1><a href="/" id="logoLink">Curso GIT 2019 Editado en Local por Segunda Vez</a></h1>
+			<h1><a href="/" id="logoLink">Curso GIT 2019</a></h1>
 		</div>
 		<div id="nav">
 			<ul>
