--- a/home.html
+++ b/home.html
@@ -19,14 +19,13 @@
 
 	<div id="page">
 		<div id="logo">
-			<h1><a href="/" id="logoLink">Curso GIT 2019</a></h1>
+			<h1><a href="/" id="logoLink">Curso GIT 2019 Editado en Local por Segunda Vez</a></h1>
 		</div>
 		<div id="nav">
 			<ul>
 				<li><a href="#/home.html">Home</a></li>
-				<li><a href="#/about.html">About</a></li>
-				<li><a href="#/home.html">Curso Git</a></li>
-				<li><a href="#/contact.html">Contact Añado comentario desde mi usuario de viewnext</a></li>
+				<li><a href="#/about.html">About</a></li>				
+				<li><a href="#/contact.html">Contact AÃ±ado comentario desde mi usuario de viewnext</a></li>
 			</ul>	
 		</div>
 		<div id="content">
