--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 		</div>
 		<div id="nav">
 			<ul>
-				<li><a href="#/home.html">Home</a></li>
+				<li><a href="#/home.html">Home Rama Eclipse</a></li>
 				<li><a href="#/about.html">About</a></li>
 				<li><a href="#/about.html">Curso GIT</a></li>
 				<li><a href="#/contact.html">Contact AÃ±ado comentario desde mi usuario de viewnext</a></li>
