--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
 		</div>
 		<div id="footer">
 			<p>
-				Webpage made by <a href="/" target="_blank">MADCOM</a>
+				Webpage made by <a href="/" target="_blank">VIEWNEXT</a>
 			</p>
 		</div>
 	</div>
